--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -15,25 +15,41 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/config-plugins": "~8.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@jamsch/expo-speech-recognition": "^0.2.15",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.0.2",
+    "assemblyai": "^4.7.0",
+    "audio": "^1.2.0",
+    "axios": "^1.7.5",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
+    "expo-speech": "^12.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "missing-asset-registry-path": "^0.0.0",
+    "path-browserify": "^1.0.1",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-svg": "15.2.0",
+    "react-native-vosk": "^0.2.2",
+    "react-native-web": "~0.19.10",
+    "expo-dev-client": "~4.0.26"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,8 +58,14 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
+  },
+  "android": {
+    "permissions": [
+      "RECORD_AUDIO"
+    ]
   },
   "private": true
 }
